tests/snapshots/cli_insta_yaml_native__max.simple.1.snap
---
source: tests/cli_insta_yaml_native.rs
info:
  program: sem-tool
  args:
    - "-o"
    - text
    - max
    - 1.0.0
    - 2.0.0
    - 1.5.0
---
success: true
exit_code: 0
----- stdout -----
2.0.0

----- stderr -----
