tests/snapshots/cli_insta_yaml_native__select.build-metadata.1.snap
---
source: tests/cli_insta_yaml_native.rs
info:
  program: sem-tool
  args:
    - select
    - build-metadata
    - 1.0.0+abc.1
---
success: true
exit_code: 0
----- stdout -----
---
value: abc.1
----- stderr -----
