tests/snapshots/cli_insta_yaml_native__select.major.1.snap
---
source: tests/cli_insta_yaml_native.rs
info:
  program: sem-tool
  args:
    - select
    - major
    - 1.2.3
---
success: true
exit_code: 0
----- stdout -----
---
value: "1"
----- stderr -----
