tests/snapshots/cli_insta_yaml_native__select.pre-release.present.snap
---
source: tests/cli_insta_yaml_native.rs
info:
  program: sem-tool
  args:
    - select
    - pre-release
    - 1.0.0-rc.1
---
success: true
exit_code: 0
----- stdout -----
---
value: rc.1
----- stderr -----
