tests/snapshots/cli_insta_yaml_native__select.text.1.snap
---
source: tests/cli_insta_yaml_native.rs
info:
  program: sem-tool
  args:
    - "-o"
    - text
    - select
    - patch
    - 2.0.4
---
success: true
exit_code: 0
----- stdout -----
4

----- stderr -----
