tests/snapshots/cli_insta_yaml_native__set.simple.1.snap
---
source: tests/cli_insta_yaml_native.rs
info:
  program: sem-tool
  args:
    - "-o"
    - text
    - set
    - 1.1.1
    - "--set-major=20"
---
success: true
exit_code: 0
----- stdout -----
20.1.1
----- stderr -----
